--- a/style.css
+++ b/style.css
@@ -2,6 +2,24 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
+h1{
+  font-size: xx-large;
+  color: black;
+}
+
+h2{
+  font-size: xx-large;
+  color: black;
+}
+
+h4{
+  font-size: xx-large;
+  color: blueviolet;
+}
+
+div{
+  font-size: larger;
+}
 
 .flex-container {
   display: flex;
@@ -12,11 +30,15 @@
   align-content: stretch;
 }
 
+
 .top {
     order: 0;
     flex: 0 1 200px;
     align-self: auto;
-}
+    text-align: center;
+    background: white;
+    color: black;
+  }
 
 .ausbildung {
     order: 0;
@@ -29,11 +51,36 @@
     flex: 0 1 auto;
     align-self: auto;
     color: white;
-    background: radial-gradient(75% 50% at 50% 44.9%, #352541 0%, var(--BG, rgb(17, 16, 19))/* {"name":"BG"} */ 100%);
+    background: black;
 }
 
 .kentnisse {
     order: 0;
     flex: 0 1 auto;
     align-self: auto;
+}
+
+
+div.imageHold {
+  padding: 55px 85px;
+}
+
+div.imageHold div {
+  float: left;
+  width: 230px;
+  height: 150px;
+  margin-left: 50px;
+}
+
+div.imageHold img {
+  width: 50px;
+  height: 50px;
+}
+
+div.imageHold img:hover {
+  position: absolute;
+  margin-left: -25px;
+  margin-top: -25px;
+  width: 80px;
+  height: 80px;
 }
